t+mk:[[Соединети Американски Држави]] ([[WT:EDIT|Assisted]]) <United States of America#6586847>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -58,6 +58,7 @@
 * Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
 * Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
+* [[Macedonian]]: {{t|mk|Соединети Американски Држави|p|tr=Soedíneti Ameríkanski D'ržavi|sc=Cyrl}}
 * Malay: [[Amerika Syarikat]]
 * Maltese: [[Stati Uniti ta' l-Amerika]], [[l-Istati Uniti ta' l-Amerika]], (''short form'') [[Stati Uniti]], [[l-Istati Uniti]], [[USA]]
 * Navajo: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
