+ Galician section <libre#6587321>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -42,6 +42,15 @@ From {{etyl|la|fr}} {{term|liber|lang=la}}
 
 ----
 
+==Galician==
+
+===Adjective===
+{{gl-adj|f=libre}}
+
+# [[free]], not captive, [[unbound]]
+
+----
+
 ==Occitan==
 
 ===Etymology===
