--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -21,7 +21,7 @@ Radical: [[日]] + [[正]]
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=si6}}
+{{yue-hanzi|jyut=si6|y=si6}}
 
 # {{defn|Cantonese|sort=日05}}
 
