--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -55,8 +55,11 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''偷''' ([[thâu]], [[thầu]], [[du]])
+
+# {{defn|Vietnamese}}
 
 [[es:偷]]
 [[fr:偷]]
