--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -92,6 +92,9 @@
 * Yiddish: ''short form'': [[פֿאַראייניקטע שטאַטן]] (Fareynikte Shtatn)
 {{trans-bottom}}
 
+====Derived terms====
+*[[Usonia]], [[Usonian]], [[U.S. American]]
+
 ===See also===
 * [[Appendix:Countries of the world]]
 * [[Appendix:Place names in the United States of America]]
