--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -144,6 +144,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Italian: {{t+|it|scrivere}}
 {{trans-mid}}
 * Kurdish: {{ku-Arab|[[نووسین]]}}
+* [[Macedonian]]: {{t|mk|пишува|tr=píšuva|sc=Cyrl}}
 * Norwegian: [[skrive]], [[føre i pennen]]
 * Portuguese: {{t+|pt|escrever}}
 * Russian: {{t+|ru|писать|sc=Cyrl}} / {{t+|ru|написать|sc=Cyrl}} (pisát’ / napisát’)
