--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -28,6 +28,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * German: [[Pferch]] {{m}}
 {{trans-mid}}
 * Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, {{italbrac|for sheep}} [[ovile]] {{m}}
+* [[Macedonian]]: {{t|mk|тoр|m|tr=tor|sc=Cyrl}},  {{qualifier|for sheep}} {{t|mk|трло|n|tr=t'rlo|sc=Cyrl}}
 * Norwegian: [[innhegning]] {{m|f}}, [[kve]] {{n}}
 * Russian: {{t+|ru|загон|m|sc=Cyrl}} (zagón)
 * Spanish: {{t+|es|corral|m}}
