/* Verb */ ce <cut#6605351>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -211,14 +211,14 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 #: ''One student kept trying to '''cut''' in front of the line.''
 # {{context|cinema, audio}} To [[cease]] [[record]]ing activities.
 #: ''After the actors read their lines, the director yelled "'''Cut'''!"''
-# To [[reduce]], ''especially'' intentionally.
+# To [[reduce]], especially intentionally.
 #: ''They're going to '''cut''' salaries by fifteen percent.''
 # To [[form]] or [[shape]] by cutting.
 #: ''I have three diamonds to '''cut''' today.''
 # To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #: ''This road '''cuts''' right through downtown.''
 # {{cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it.
-# {{informal}} Not to [[attend]] a [[class]], ''especially'' when this is not [[permit]]ted.
+# {{informal}} Not to [[attend]] a [[class]], especially when this is not [[permit]]ted.
 #: ''I '''cut''' fifth period to hang out with Angela.''
 # To change [[direction]] suddenly.
 #: ''The football player '''cut''' to his left to evade a tackle.''
