--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -1,11 +1,12 @@
-==English==
+{{also|Brick}}
 [[Image:Brick wall old.jpg|thumb|A '''brick''' wall]]
+==English==
 
 ===Etymology===
-{{wikipedia}}
 Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic source akin to Middle Dutch [[bricke]] "a tile", literally "a broken piece", from the verbal root of break
 
 ===Pronunciation===
+{{wikipedia}}
 * {{enPR|brĭk}}, {{IPA|/brɪk/}}, {{SAMPA|/brIk/}}
 * {{audio|en-us-brick.ogg|Audio (US)}}
 *: {{rhymes|ɪk}}
@@ -209,7 +210,7 @@ From English ''[[brig]]''.
 ===Noun===
 {{fr-noun|m}}
 
-# {{nautical}} [[brig|Brig]], a two-masted vessel type.
+# {{nautical}} A [[brig]], a two-masted vessel type.
 # A [[fritter]] with a filling.
 
 [[ar:brick]]
