--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -62,6 +62,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
 * Swedish: {{t+|sv|spel}}
+* Turkish: {{t|tr|oyun}}
 * Welsh: {{t|cy|gêm|f}}
 {{trans-bottom}}
 
@@ -70,6 +71,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Finnish: {{t+|fi|näytelmä}}
 {{trans-mid}}
 * Russian: {{t+|ru|пьеса|f|tr=p’jésa|sc=Cyrl}}
+* Turkish: {{t|tr|oyun}}
 {{trans-bottom}}
 
 {{trans-top|theatrical performance}}
@@ -102,6 +104,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Spanish: [[obra]] [[teatral]] {{f}}
 * Swedish: {{t+|sv|pjäs|c}}
 * [[Telugu]]: [[నాటకం]] (naaTakaM)
+* Turkish: {{t|tr|oyun}},  {{t|tr|tiyatro oyunu}}
 * Welsh: {{t|cy|drama|f}}
 {{trans-bottom}}
 
@@ -219,6 +222,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Spanish: {{t+|es|jugar}}
 * Swedish: {{t+|sv|leka}}
 * [[Telugu]]: [[ఆడు]] (aaDu)
+* Turkish: {{t|tr|oynamak}}
 {{trans-bottom}}
 
 {{trans-top|produce music using a musical instrument ([[transitive]] sense), affecting a noun}}
