--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -281,6 +281,7 @@
 [[ku:straight]]
 [[hu:straight]]
 [[nl:straight]]
+[[no:straight]]
 [[pl:straight]]
 [[ru:straight]]
 [[simple:straight]]
@@ -289,6 +290,6 @@
 [[ta:straight]]
 [[te:straight]]
 [[th:straight]]
-[[vi:straight]]
 [[tr:straight]]
+[[vi:straight]]
 [[zh:straight]]
