--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -51,6 +51,7 @@
 * Japanese: [[港]]　([[みなと]], ''minato'')
 * Korean: [[항구]] ([[港口]], hanggu)
 * [[Malayalam]]: [[തുറമുഖം]] (thuRamukham)
+* Mandarin: {{t|zh|港|tr=gǎng|sc=Hani}},  {{t|zh|港口|tr=gǎngkǒu|sc=Hani}},  {{t|zh|口岸|tr=kǒu'àn|sc=Hani}},  {{t|zh|港埠|tr=gǎngbù|sc=Hani}}
 * Persian: {{t-|fa|بندر|tr=bandar|sc=fa-Arab|xs=Persian}}
 * Polish: {{t+|pl|port|m}}
 * Portuguese: {{t+|pt|porto|m}}
@@ -72,6 +73,7 @@
 * Hungarian: {{t+|hu|kikötőváros}}
 * [[Ido]]: [[portuo]]
 * Italian: [[città portuale]] {{f}}
+* Mandarin: {{t|zh|港市|tr=gǎngshì|sc=Hani}}
 * Polish: [[miasto portowe]] {{n}}
 * Romanian: {{t|ro|port|n}}
 * Spanish: {{t-|es|puerto|m}}
