--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -37,6 +37,7 @@
 * Latvian: [[Čehijas Republika]] {{f}}
 {{trans-mid}}
 * [[Luxembourgish]]: [[Tschechesch Republik]]
+* [[Macedonian]]: {{t|mk|Чешка|f|tr=Čéška|sc=Cyrl}},  {{t|mk|Чешка Република|f|tr=Čéška Repúblika|sc=Cyrl}}
 * Maltese: ir-[[Repubblika Ċeka]]
 * Norwegian: {{t+|no|Tsjekkia}}, {{t-|no|Den tsjekkiske republikk}}
 * Persian: {{t-|fa|جمهوری چک|sc=fa-Arab|xs=Persian}}
