t+mk:[[представа]] ([[WT:EDIT|Assisted]]) <play#6657280>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -97,6 +97,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Japanese: [[演劇]] (えんげき, engeki)
 * Korean: [[연극]] (yeon-geuk)
 * Kurdish: {{t+|ku|şano|f}}, {{t+|ku|piyes|f}}, {{t+|ku|tiyatro|f}}
+* [[Macedonian]]: {{t|mk|представа|f|tr=prédstava|sc=Cyrl}}
 * [[Malayalam]]: [[നാടകം]] (naatakam)
 * Polish: {{t+|pl|sztuka|f}}
 * Portuguese: [[peça]] [[teatral]] {{f}}
