t+mk:[[игра]] ([[WT:EDIT|Assisted]]) <play#6657284>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -118,6 +118,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Hungarian: {{t+|hu|játék}}
 * Kurdish: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|игра|f|tr=ígra|sc=Cyrl}}
 * Polish: {{t+|pl|gra|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá|sc=Cyrl}}
 * Slovene: {{t+|sl|igra|f}}
