--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -128,6 +128,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-top|major move by a business}}
 * Finnish: {{t-|fi|siirto}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|игра|f|tr=ígra|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|geological formation}}
