--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -24,7 +24,8 @@
 * [[Breton]]: [[Alamagn]]
 * Bulgarian: {{t|bg|Германия|f|tr=Germánija|sc=Cyrl}}
 * [[Catalan]]: [[Alemanya]]
-* Chinese: [[德国]] (Déguó), [[德意志]] (Déyìzhì)
+* Chinese:
+*: Mandarin: [[德国]] (Déguó), [[德意志]] (Déyìzhì)
 * [[Cornish]]: [[Almayn]]
 * Croatian: {{t-|hr|Njemačka|f|alt=Njèmačkā}}
 * Czech: {{t+|cs|Německo|n}}
@@ -79,7 +80,7 @@
 * Swedish: {{t+|sv|Tyskland}}
 * Thai: {{Thai|[[ชาวเยอรมัน]]}} (chaao yerráman)
 * Turkish: {{t+|tr|Almanya}}
-* Ukrainian: {{t+|uk|Німеччина|f|tr=niméččyna|sc=Cyrl|xs=Ukrainian}}
+* Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna|sc=Cyrl|xs=Ukrainian}}
 * [[Uyghur]]: {{t|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab}}
 * Vietnamese: [[nước Đức]]
 * [[Võro]]: [[S'aksamaa]]
