--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -4,7 +4,8 @@
 From {{proto|Semitic|ʾarṣ́-|lang=he}}.
 
 ===Pronunciation===
-* {{IPA|/ˈeʁets/|lang=he}}
+* {{a|phonemic}} {{IPA|/ˈerets/|lang=he}}
+* {{a|IL}} {{IPA|/ˈɛʁɛts/|lang=he}}
 
 ===Noun===
 {{he-noun|g=f|tr=érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ}}
