--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -66,8 +66,11 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''易''' ([[dịch]], [[dể]], [[dễ]], [[di]], [[diệc]], [[dẻ]], [[dẹ]], [[dị]], [[dịu]], [[rẻ]], [[rể]])
+
+# {{defn|Vietnamese}}
 
 [[fr:易]]
 [[ko:易]]
