t+lt:[[griaustinis]] t-balance t+sk:[[hrom]] ([[WT:EDIT|Assisted]]) <thunder#6690267>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -54,6 +54,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Italian: {{t-|it|tuono|m}}
 * Japanese: {{t+|ja|雷|tr=kaminarí|sc=Jpan}}
 * Korean: [[우레]] (ure)
+* Lithuanian: {{t|lt|griaustinis}}
 {{trans-mid}}
 * [[Manx]]: {{t-|gv|taarnagh|xs=Manx}}
 * Polish: {{t+|pl|grzmot|m}}
@@ -62,6 +63,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Russian: {{t+|ru|гром|m|tr=grom|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
 * Serbian: {{t-|sr|grom}}, {{t-|sr|grmljavina}}
+* Slovak: {{t|sk|hrom}}
 * Slovene: [[grom]] {{m}}, [[grmenje]] {{n}}
 * Spanish: {{t+|es|trueno|m}}
 * Swahili: [[radi]] ''(nc 9/10)''
