--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -175,7 +175,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 
 # {{obsolete}} To carry, bear, or [[transport]]. See {{term|porter}}.
 #: ''They are easily '''ported''' by boat into other shires.'' — [[w:Thomas Fuller|Fuller]], ''The History of the Worthies of England''
-# {{military}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; to throw (the weapon) into this position on command.
+# {{military}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; or, to throw (the weapon) into this position on command.
 #: '''''Port''' arms!''
 #: ''...the angelic squadron...began to hem him round with '''ported''' spears.'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
 # {{computing|video games}} To adapt, modify, or create a new version of, a program so that it works on a different platform; to adapt a console [[video game]] title to be sold and played on another brand of console. {{pedialite|Porting|Porting (computing)}}
