--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -25,6 +25,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 
 =====Translations=====
 {{trans-top|to begin building}}
+* Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel|sc=Armn}},  {{t|hy|հիմքը գցել|tr=himk’ë gc’el|sc=Armn}}
 * Czech: {{t+|cs|založit}}
 * French: {{t+|fr|fonder}}
 {{trans-mid}}
@@ -34,10 +35,11 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 {{trans-bottom}}
 
 {{trans-top|to start organization}}
+* Armenian: {{t|hy|հիմնադրել|tr=himnadrel|sc=Armn}},  {{t|hy|ստեղծել|tr=steġçel|sc=Armn}},  {{t|hy|հիմնել|tr=himnel|sc=Armn}}
 * Czech: {{t+|cs|založit}}
 * Finnish: {{t+|fi|perustaa}}
-* French: {{t+|fr|fonder}}
 {{trans-mid}}
+* French: {{t+|fr|fonder}}
 * Polish: [[założyć]], [[zakładać]]
 * Russian: {{t|ru|основывать|tr=osnóvyvat'|sc=Cyrl}} {{impf}}, {{t|ru|основать|tr=osnovát'|sc=Cyrl}} {{pf}}
 {{trans-bottom}}
@@ -68,7 +70,7 @@ From {{etyl|frm}} {{term|fondre|lang=frm}}.
 
 =====Translations=====
 {{trans-top|to melt}}
-* Armenian: {{t-|hy|ձուլել|tr=julel|sc=Armn|xs=Armenian}}
+* Armenian: {{t-|hy|ձուլել|tr=julel|sc=Armn|xs=Armenian}},  {{t|hy|հալել|tr=halel|sc=Armn}},  {{t|hy|թափել|tr=t’ap’el|sc=Armn}}
 {{trans-mid}}
 * French: {{t+|fr|fondre}}
 {{trans-bottom}}
