t+mk:[[прав]] ([[WT:EDIT|Assisted]]) <straight#6705967>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -62,6 +62,7 @@
 * Italian: {{t+|it|dritto}}
 * Japanese: {{t|ja|真直ぐな|tr=massugu na|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[ڕێک]]}}
+* [[Macedonian]]: {{t|mk|прав|m|tr=prav|sc=Cyrl}}
 * Polish: {{t+|pl|prosty}}
 * Portuguese: {{t+|pt|reto|m}}
 * Russian: {{t+|ru|прямой|tr=pr'amój|sc=Cyrl}}
