--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -89,7 +89,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|retto}}
 * Japanese: {{t|ja|実直な|tr=jicchoku na|sc=Jpan}}
-* [[Macedonian]]: {{t|mk|отворен|m|tr=ótvoren|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|отворен|m|tr=ótvoren|sc=Cyrl}},  {{t|mk|искрен|m|tr=ískren|sc=Cyrl}}
 * Polish: {{t+|pl|prosty}}
 * Portuguese: {{t+|pt|direto|m}}, {{t+|pt|honesto|m}}
 * Russian: {{t+|ru|прямой|tr=pr'amój|sc=Cyrl}}
