t+mk:[[право]] ([[WT:EDIT|Assisted]]) <straight#6705986>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -217,6 +217,7 @@
 * German: {{t+|de|geradeaus}}
 * Japanese: {{t|ja|真っすぐに|tr=massugu ni|sc=Jpan}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|право|tr=právo|sc=Cyrl}}
 * Russian: {{t+|ru|прямо|tr=pr'ámo|sc=Cyrl}}
 * [[Scots]]: {{tø|sco|straucht|xs=Scots}}
 * [[Scottish Gaelic]]: {{t-|gd|dìreach|xs=Scottish Gaelic}}
