--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -43,15 +43,16 @@ Old English ''[[sūcan]]''
 * Finnish: {{t+|fi|imeä}}
 * French: {{t+|fr|sucer}}
 * German: {{t+|de|saugen}}
-* Hindi: [[चूसना]] (ćūsnā)
+* Hindi: {{t|hi|चूसना|sc=Deva|tr=cūsnā}}
 * Italian: [[succhiare]], [[suggere]]
 * Korean: [[빨다]] (ppalda)
-{{trans-mid}}
 * Kurdish: [[mêjîn]], [[mêtin]], {{ku-Arab|[[مژین]]}}
+{{trans-mid}}
 * Latin: {{t-|la|fellare}}
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|цица|tr=cíca|sc=Cyrl|xs=Macedonian}}
 * Norwegian: {{t-|no|suge}}
+* Persian: {{t|fa|مکیدن|tr=makidan|sc=fa-Arab}}
 * Polish: {{t+|pl|ssać}}
 * Portuguese: {{t-|pt|chupar}}, {{t+|pt|sugar}}
 * Romanian: {{t+|ro|suge}}
