iwiki +[[:sw:port]] <port#6708734>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -391,6 +391,7 @@ From late {{etyl|non|sv}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} 
 [[io:port]]
 [[it:port]]
 [[kk:port]]
+[[sw:port]]
 [[lo:port]]
 [[li:port]]
 [[hu:port]]
@@ -404,7 +405,7 @@ From late {{etyl|non|sv}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} 
 [[sv:port]]
 [[ta:port]]
 [[te:port]]
-[[vi:port]]
 [[tr:port]]
+[[vi:port]]
 [[vo:port]]
 [[zh:port]]
