iwiki +[[:ml:fight]] <fight#6713065>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -338,6 +338,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 [[ku:fight]]
 [[lo:fight]]
 [[hu:fight]]
+[[ml:fight]]
 [[nl:fight]]
 [[ja:fight]]
 [[pl:fight]]
