--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -45,7 +45,7 @@ Old English ''[[sūcan]]''
 * German: {{t+|de|saugen}}
 * Hindi: {{t|hi|चूसना|sc=Deva|tr=cūsnā}}
 * Italian: [[succhiare]], [[suggere]]
-* Japanese: {{t|ja|吸う|tr=すう, suu|sc=Jpan}}
+* Japanese: {{t|ja|吸う|tr=すう, suu|sc=Jpan}},  {{t|ja|しゃぶる|tr=shaburu|sc=Jpan}}
 * Korean: [[빨다]] (ppalda)
 * Kurdish: [[mêjîn]], [[mêtin]], {{ku-Arab|[[مژین]]}}
 {{trans-mid}}
