--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -94,6 +94,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-see|algebraic curve|[[algebraic curve#Translations|algebraic curve]]}}
 {{trans-top|informal: usually in plural: attractive features of a woman}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
+* Finnish: {{t|fi|kurvit|p}}
 * Hebrew: [[חיטובים]] (khit'uvym) {{m|p}}
 {{trans-mid}}
 {{trans-bottom}}
