iwiki +[[:sw:Israel]] <Israel#6721892>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -199,6 +199,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 [[gl:Israel]]
 [[ko:Israel]]
 [[hi:Israel]]
+[[sw:Israel]]
 [[ku:Israel]]
 [[lt:Israel]]
 [[hu:Israel]]
