--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -32,6 +32,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Norwegian: [[innhegning]] {{m|f}}, [[kve]] {{n}}
 * Russian: {{t+|ru|загон|m|sc=Cyrl}} (zagón)
 * Spanish: {{t+|es|corral|m}}
+* [[Swahili]]: {{t|sw|kalamu}}
 {{trans-bottom}}
 
 {{trans-top|prison cell}}
