--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -137,7 +137,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Slovak: {{t-|sk|most|m}}
 * Slovene: {{t+|sl|most|m}}
 * Spanish: {{t+|es|puente|m}}, {{t+|es|bóveda|f}} (''El Salvador'')
-* Swahili: {{t+|sw|daraja|xs=Swahili}}
+* Swahili: {{t+|sw|daraja|xs=Swahili}},  {{t|sw|daraja}}
 * Swedish: {{t+|sv|bro|c}}
 * Tahitian: [['ē'a turu]]
 * {{trreq|Tamil}}
