/* Verb */ added definition <skirt#6730343>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -161,6 +161,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 
 # To be on or form the [[border]] of.
 # To move around or along the border of; to avoid the center of.
+# To wear a skirt.
 
 ====Related terms====
 * [[skirting-board]]
