--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -11,7 +11,7 @@ From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[freedom]], [[liberty]]|lang=es}
 ===Adjective===
 {{en-adj|-}}
 
-# {{context|free software movement}} With very few limitations on distribution or improvement; including [[source code]]. Contrast with [[proprietary software]].
+# {{context|free software movement}} With very few limitations on distribution or improvement; including [[source code]].
 
 ===See also===
 * [[gratis]]
