--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -124,6 +124,7 @@ From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t-|ro|vrea}}, {{t+|ro|prefera}}
 * Serbian: {{t-|sr|odlučiti}}, {{t|sr|odabrati}}
+* Spanish: {{t|es|escoger}}
 {{trans-bottom}}
 
 {{checktrans-top}}
