--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -1,5 +1,8 @@
 ==Translingual==
 
+===Etymology===
+{{Han compound|人|尃|c1=s|c2=p|t1=man|ls=psc}}
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2324<sub>2</sub>|canj=人戈月戈 (OIBI)}}
 
