--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -1,6 +1,9 @@
 {{also|博}}
 ==Translingual==
 
+===Etymology===
+{{Han compound|心|尃|c1=s|c2=p|t1=heart|ls=psc}}
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心戈月戈 (PIBI)}}
 
