--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -133,6 +133,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 [[id:stomach]]
 [[it:stomach]]
 [[kk:stomach]]
+[[sw:stomach]]
 [[ku:stomach]]
 [[lo:stomach]]
 [[lt:stomach]]
