--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -58,7 +58,7 @@
 * Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
-* [[Macedonian]]: {{t|mk|Соединети Американски Држави|p|tr=Soedíneti Ameríkanski D'ržavi|sc=Cyrl|xs=Macedonian}}
+* [[Macedonian]]: {{t|mk|Соединети Американски Држави|p|tr=Soedíneti Ameríkanski D'ržavi|sc=Cyrl|xs=Macedonian}}, [[САД]] (SAD)
 * Malay: [[Amerika Syarikat]]
 * Maltese: [[Stati Uniti ta' l-Amerika]], [[l-Istati Uniti ta' l-Amerika]], (''short form'') [[Stati Uniti]], [[l-Istati Uniti]], [[USA]]
 * Navajo: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
