--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -101,6 +101,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 [[es:vomit]]
 [[fa:vomit]]
 [[fr:vomit]]
+[[ko:vomit]]
 [[io:vomit]]
 [[it:vomit]]
 [[kk:vomit]]
@@ -112,7 +113,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 [[sv:vomit]]
 [[ta:vomit]]
 [[te:vomit]]
-[[vi:vomit]]
 [[tr:vomit]]
+[[vi:vomit]]
 [[vo:vomit]]
 [[zh:vomit]]
