--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -50,7 +50,9 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Greek: {{t+|el|εικόνα|f|tr=ikóna|sc=Grek}}, {{t+|el|εικόνισμα|n|tr=ikónizma|sc=Grek}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
+* Japanese: {{t|ja|聖像|tr=せいぞう, seizō|sc=Jpan}}
 * Latin: {{t+|la|icon|f}}
+* Mandarin: {{t|zh|聖像|sc=Hani}},  {{t|zh|圣像|tr=shèngxiàng|sc=Hani}}
 * Polish: {{t+|pl|ikona|f}}
 * Russian: {{t+|ru|икона|f|tr=ikóna|sc=Cyrl}}
 * Serbian:
@@ -83,6 +85,8 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Greek: {{t+|el|εικονίδιο|n|tr=ikoníðio|sc=Grek}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
+* Japanese: {{t|ja|アイコン|tr=aikon|sc=Jpan}}
+* Mandarin: {{t|zh|圖標|sc=Hani}},  {{t|zh|图标|tr=túbiāo|sc=Hani}}
 * Polish: {{t+|pl|ikona|f}}, [[ikonka]] {{f}}
 * Russian: {{t|ru|иконка|f|tr=ikónka|sc=Cyrl}}
 * Serbian:
