--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -88,9 +88,10 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Czech: {{t-|cs|ikona|f}}
 * Dutch: {{t-|nl|icoon|f|m}}, {{t-|nl|pictogram|n}}
 * Finnish: {{t+|fi|kuvake}}
+* French: {{t|fr|icon|m}}
 * German: {{t-|de|Icon|n}}
-* Greek: {{t+|el|εικονίδιο|n|tr=ikoníðio|sc=Grek}}
 {{trans-mid}}
+* Greek: {{t+|el|εικονίδιο|n|tr=ikoníðio|sc=Grek}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t|ja|アイコン|tr=aikon|sc=Jpan}}
 * Polish: {{t+|pl|ikona|f}}, [[ikonka]] {{f}}
