iwiki +[[:sv:mandat]] <mandat#6760515>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -49,5 +49,6 @@ Borrowed from {{etyl|la|fr}} {{term|mandatum}}, from {{term|mandare||to put in o
 [[hu:mandat]]
 [[ru:mandat]]
 [[fi:mandat]]
+[[sv:mandat]]
 [[tt:mandat]]
 [[vi:mandat]]
