--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,7 +5,7 @@
 * [[blonde]] (US)
 
 ===Etymology===
-From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from Old French ''blont'', of {{etyl|gem}} origin from Frankish ''*blund'' "a mixed color between golden and light-brown"; compare Old English {{term|blondenfeax|''blonden''feax|''grey''-haired|lang=ang}}. See {{term|blend}}
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} ''blont'', of {{etyl|gem}} origin from {{etyl|frk}} ''*blund'' "a mixed color between golden and light-brown"; compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|''grey''-haired|lang=ang}}. See {{term|blend}}
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
