--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -107,6 +107,7 @@ In the English language, it is one of only a few distinct words where the gender
 [[it:blonde]]
 [[lo:blonde]]
 [[hu:blonde]]
+[[nl:blonde]]
 [[pl:blonde]]
 [[ru:blonde]]
 [[simple:blonde]]
