--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -321,6 +321,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 
 {{trans-top|to reduce}}
 * Armenian: {{t-|hy|կտրել|tr=ktrel|sc=Armn|xs=Armenian}}
+* [[Bengali]]: {{t|bn|কাটা|sc=Beng}}
 * Danish: [[skære]], [[beskære]], [[nedsætte]]
 * Finnish: {{t+|fi|leikata}}
 * German: {{t-|de|beschneiden}}
