iwiki +[[:zh:skirt]] <skirt#6798878>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -214,3 +214,4 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 [[th:skirt]]
 [[tr:skirt]]
 [[vi:skirt]]
+[[zh:skirt]]
