t+ga:[[feoil]] t-balance ([[WT:EDIT|Assisted]]) <flesh#6802476>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -35,6 +35,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 {{trans-mid}}
 * Hungarian: {{t+|hu|hús}}
 * [[Ido]]: [[karno]]
+* Irish: {{t|ga|feoil|f}}
 * Italian: {{t+|it|carne}}
 * Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
 * Russian: мягкая [[ткань]] {{f}}, [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
@@ -48,10 +49,11 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Danish: {{t+|da|kød}}
 * Dutch: {{t+|nl|vlees|n}}
 * Finnish: {{t+|fi|liha}}
-{{trans-mid}}
 * German: {{t+|de|Fleisch|n}}
+{{trans-mid}}
 * Greek: [[σάρκα]] [ˈsarka] {{f}}, [[κρέας]] [ˈkre̞.as] {{n}} (means also "meat")
 * Hungarian: {{t+|hu|hús}}
+* Irish: {{t|ga|feoil|f}}
 * Russian: {{t+|ru|мясо|n|sc=Cyrl}}, {{t+|ru|плоть|f|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[feòil]] {{f}}
 {{trans-bottom}}
