--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|Choice}}
 
 ===Etymology===
-From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
+{{etyl|enm}} ''chosen'', ''chesen'' from {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 
 ===Pronunciation===
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/}}, {{SAMPA|/tSu:z/}}
