t+be:[[Францыя]] t+zh:[[法蘭西]] t+zh:[[法兰西]] t+zh:[[法國]] t+zh:[[法国]] ([[WT:EDIT|Assisted]]) <France#6808570>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -36,6 +36,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Armenian: [[Ֆրանսիա]] (Fransia)
 * [[Asturian]]: [[Francia]] {{f}}
 * [[Basque]]: [[Frantzia]]
+* Belarusian: {{t|be|Францыя|f|tr=Fráncyja|sc=Cyrl}}
 * Bosnian: {{t-|bs|Francuska|f}}
 * [[Breton]]: [[Frañs]] ''(state)'', [[Bro-C'hall]] ''(country)''
 * Bulgarian: [[Франция]] (Frántsija) {{f}}
@@ -88,6 +89,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Malagasy]]: [[Frantsa]]
 * Malay: {{t-|ms|Perancis|xs=Malay}}
 * Maltese: {{t-|mt|Franza|xs=Maltese}}
+* Mandarin: {{t|zh|法蘭西|sc=Hani}},  {{t|zh|法兰西|tr=Fǎlánxī|sc=Hani}},  {{t|zh|法國|sc=Hani}},  {{t|zh|法国|tr=Fǎguó|sc=Hani}}
 * Mongolian: [[Франц улс]] (Frants uls)
 * Nauruan: {{t-|na|France|xs=Nauruan}}
 * Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
