--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -39,7 +39,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Belarusian: {{t|be|Францыя|f|tr=Fráncyja|sc=Cyrl}}
 * Bosnian: {{t-|bs|Francuska|f}}
 * [[Breton]]: [[Frañs]] ''(state)'', [[Bro-C'hall]] ''(country)''
-* Bulgarian: [[Франция]] (Frántsija) {{f}}
+* Bulgarian: [[Франция]] (Fráncija) {{f}}
 * [[Catalan]]: [[França]] {{f}}
 * [[Cebuano]]: {{tø|ceb|Pransiya}}
 * Chinese:
@@ -121,7 +121,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Thai: {{Thai|[[ฝรั่งเศส]]}} (fàràngsèt)
 * [[Tok Pisin]]: [[Pranis]]
 * Turkish: {{t+|tr|Fransa}}
-* Ukrainian: [[Франція]] (Frántsija) {{f}}
+* Ukrainian: [[Франція]] (Fráncija) {{f}}
 * Urdu: {{fa-Arab|[[فرانس]]}} (frâns)
 * Vietnamese: {{t-|vi|Pháp|xs=Vietnamese}}
 * [[Võro]]: [[Prantsusmaa]]
