t+mk:[[се важи]] ([[WT:EDIT|Assisted]]) <count#6811688>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -111,6 +111,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Hungarian: {{t+|hu|számít}}
 * Italian: {{t+|it|contare}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|се важи|tr=se váži|sc=Cyrl}}
 * Polish: [[liczyć się]]
 * Slovene: [[šteti]]
 {{trans-bottom}}
