--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -55,14 +55,15 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Japanese: {{t+|ja|雷|tr=kaminarí|sc=Jpan}}
 * Korean: [[우레]] (ure)
 * Lithuanian: {{t|lt|griaustinis|xs=Lithuanian}}
-{{trans-mid}}
 * [[Manx]]: {{t-|gv|taarnagh|xs=Manx}}
+{{trans-mid}}
 * Polish: {{t+|pl|grzmot|m}}
 * Portuguese: {{t+|pt|trovão|m}}
 * [[Romagnolo]]: [[tràun]] {{m}}
 * Russian: {{t+|ru|гром|m|tr=grom|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
 * Serbian: {{t-|sr|grom}}, {{t-|sr|grmljavina}}
+* [[Sicilian]]: {{t|scn|tronu|m}}
 * Slovak: {{t-|sk|hrom}}
 * Slovene: [[grom]] {{m}}, [[grmenje]] {{n}}
 * Spanish: {{t+|es|trueno|m}}
