--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -88,6 +88,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * {{trreq|Slovak}}
 * Slovene: {{t+|sl|boriti se}}
 * Spanish: {{t+|es|pelear}}, {{t-|es|luchar}}
+* Swahili: {{t|sw|vita}}
 * Swedish: {{t-|sv|strida}}, {{t+|sv|slåss}}, {{t-|sv|kämpa}}
 * Turkish: {{t+|tr|savaşmak}}
 * {{trreq|Vietnamese}}
@@ -106,6 +107,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Portuguese: {{t+|pt|lutar}}
 * Russian: {{t+|ru|бороться|tr=borót’sja|sc=Cyrl}}, {{t|ru|сражаться|tr=sražát'sja|sc=Cyrl}} {{impf}}
 * Spanish: {{t-|es|luchar}}
+* Swahili: {{t|sw|vita}}
 {{trans-bottom}}
 
 {{trans-top|to conduct or engage in}}
@@ -118,6 +120,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Portuguese: {{t+|pt|lutar}}
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
+* Swahili: {{t|sw|vita}}
 {{trans-bottom}}
 
 {{trans-top|to engage in combat}}
@@ -137,6 +140,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Portuguese: [[lutar]] com/contra, [[combater]]
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
+* Swahili: {{t|sw|vita}}
 {{trans-bottom}}
 
 {{trans-top|to counteract}}
@@ -159,6 +163,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: [[lutar]] contra, [[combater]], [[enfrentar]]
 * Russian: {{t|ru|биться|tr=bít's'a|sc=Cyrl}} {{impf}}, {{t|ru|сражаться|tr=sražát's'a|sc=Cyrl}} {{impf}}
+* Swahili: {{t|sw|vita}}
 * Swedish: [[bekämpa]]
 {{trans-bottom}}
 
