--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -164,6 +164,8 @@ From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}} from 
 
 {{trans-top|computing: logical or physical construct into and from which data are transferred}}
 * Arabic: {{t|ar|منفذ|m|tr=manfadh|sc=Arab}}
+* Chinese:
+*: Mandarin: {{t|zh|端口|tr=duānkǒu|sc=Hani}}
 * Estonian: {{t+|et|port}}
 * Finnish: {{t+|fi|portti}}
 * French: {{t|fr|port|m}}
@@ -172,7 +174,6 @@ From {{etyl|la}} {{term|porta||passage, gate}}, reinforced in {{etyl|enm}} from 
 {{trans-mid}}
 * Greek: {{t+|el|θύρα|f|sc=Grek}}, {{t+|el|σύνδεση|f|sc=Grek}}
 * Japanese: {{t|ja|ポート|tr=pōto|sc=Jpan}}
-* Mandarin: {{t|zh|端口|tr=duānkǒu|sc=Hani}}
 * Portuguese: {{t|pt|porta|f}}
 * Russian: {{t|ru|порт|m|tr=port|sc=Cyrl}}
 * Spanish: {{t|es|puerto|m}}
