/* English */ noun (lead strip) <came#6847507>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -8,6 +8,11 @@
 * {{audio|en-us-came.ogg|Audio (US)}}
 *: {{rhymes|eɪm}}
 
+===Noun===
+{{en-noun}}
+
+# A grooved strip of lead used to hold panes of glass together.
+
 ===Verb===
 '''came'''
 
