--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -51,6 +51,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 * Latin: {{t+|la|et cetera}}
 * Latvian: [[un tā tālāk]], [[utt.]]
 * Lithuanian: [[ir taip toliau]], [[ir t.t.]]
+* [[Macedonian]]: {{t|mk|и така натаму|tr=i táka nátamu|sc=Cyrl}}
 * Norwegian (Bokmål): [[og så videre]], {{t+|no|osv.}}
 * [[Ossetian]]: [[æмæ аф. д.]]
 * Polish: {{t+|pl|itd.}} [[i tak dalej]], {{t+|pl|itp.}} [[i tym podobne]]
