added lang=nl to IPA <het#6853058>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -31,9 +31,9 @@ Strong conjugation of {{term|heat}}
 ==Dutch==
 
 ===Pronunciation===
-*{{a|BE}} {{IPA|/ɦət/}}
+* {{a|BE}} {{IPA|/ɦət/|lang=nl}}
 *: {{audio|Nl-het (Belgium).ogg|audio (Belgium)}}
-*{{a|NL}} {{IPA|/ɦɛt/}}
+* {{a|NL}} {{IPA|/ɦɛt/|lang=nl}}
 *: {{audio|Nl-het.ogg|audio (Netherlands)}}
 
 ===Article===
