t+mk:[[русокос]] t+mk:[[плав]] t+mk:[[русокоса]] t+mk:[[плава]] ([[WT:EDIT|Assisted]]) <blond#6859712>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -36,6 +36,7 @@ From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, 
 * Italian: {{t+|it|biondo}}
 * Latin: [[fulvius]], [[lauricomus]], [[flavicomus]]
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|русокос|m|tr=rúsokos|sc=Cyrl}},  {{t|mk|плав|m|tr=plav|sc=Cyrl}},  {{t|mk|русокоса|f|tr=rusókosa|sc=Cyrl}},  {{t|mk|плава|f|tr=pláva|sc=Cyrl}}
 * Norwegian: [[lys(håret)]], blond, [[blondine]]
 * Portuguese: [[louro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]]; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]]
 * Romanian: [[blondă]]
