/* Translations */ <United States of America#6863215>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -15,39 +15,39 @@
 ====Translations====
 {{trans-top|Country in North America}}
 * [[Afrikaans]]: {{t|af|Verenigde State van Amerika|xs=Afrikaans}}
-* Albanian: [[Shtete e Bashkuara të Amerikës]], [[SHBA]]
-* Arabic: {{Arab|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{Arab|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
+* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t|sq|SHBA}}
+* Arabic: {{Arab|[[الولايات المتحدة الأمريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{Arab|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
 * Armenian: {{t-|hy|Ամերիկայի Միացյալ Նահանգներ|tr=Amerikayi Miac'yal Nahangner|sc=Armn|xs=Armenian}}
-* [[Azeri]]: [[Amerika Birləşmiş Ştatları]]
+* [[Azeri]]: {{t|az|Amerika Birləşmiş Ştatları}}
 * Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
 * Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
-* [[Breton]]: [[Stadoù-Unanet Amerika]] {{f|p}}, [[SUA]]
-* Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
-* [[Catalan]]: [[Estats Units d'Amèrica]] {{m|p}}
+* [[Breton]]: {{t|br|Stadoù-Unanet Amerika|f|p}}, {{t|br|SUA}}
+* Bulgarian: {{t|bg|Съединени Американски Щати|tr=Sǎedineni amerikanski štati}}, {{t|bg|САЩ}}
+* [[Catalan]]: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|sc=Hani|xs=Cantonese}}
-*: Mandarin: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
+*: Mandarin: [[美利堅合衆國]], [[美利坚合众国]] (Měilìjiān Hézhòngguó); [[美國]], [[美国]] (Měiguó)
 * Croatian: {{t-|hr|Sjedinjene Američke Države|f|p}}
 * Czech: {{t-|cs|Spojené státy americké}}, {{t-|cs|Spojené státy}}
-* Danish: [[Amerikas Forenede Stater]], [[Forenede Stater]]
+* Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
 * Dutch: {{t+|nl|Verenigde Staten van Amerika|f|p}}, {{t+|nl|Verenigde Staten}}, {{t-|nl|VS}}
 * Esperanto: {{t+|eo|Usono|xs=Esperanto}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko|xs=Esperanto}}
 * Estonian: {{t-|et|Ameerika Ühendriigid}}
 * Filipino: {{t-|tl|Estados Unidos ng Amerika|xs=Tagalog}}
-* Finnish: [[Amerikan yhdysvallat]], ''short:'' [[Yhdysvallat]], [[USA]]
-* French: [[États-Unis d'Amérique]] {{m|p}}, (''short form'') [[États-Unis]] {{m|p}}, [[É-U]]
-* Georgian: [[ამერიკის შეერთებული შტატები]] (amerikis šeert‘ebuli štatebi)
-* German: [[Vereinigte Staaten von Amerika]] {{m|p}}, (''short form'') [[Vereinigte Staaten]] {{m|p}}, [[USA]] {{m|p}} or {{f|s}}
+* Finnish: {{t|fi|Amerikan yhdysvallat}}, ''short:'' {{t|fi|Yhdysvallat}}, {{t|fi|USA}}
+* French: {{t|fr|États-Unis d'Amérique|m|p}}, (''short form'') {{t|fr|États-Unis|m|p}}, {{t|fr|É-U}}
+* Georgian: {{t|ka|ამერიკის შეერთებული შტატები|tr=amerikis šeert'ebuli štatebi}}
+* German: {{t|de|Vereinigte Staaten von Amerika||m|p}}, (''short form'') {{t|de|Vereinigte Staaten|m|p}}, {{t|de|USA|m|p}} or {{f|s}}
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís|sc=Grek}} (official), ''short forms:'' {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís|sc=Grek}}, {{t+|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes|sc=Grek}}, {{t+|el|ΗΠΑ|f|p|tr=IPA|sc=Grek}} (USA)
 * [[Gujarati]]: [[સંયુકત રાજ્ય અમેરિકા]]
-* Hawaiian: [['Amelika Huipū'ia]]
-* Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
-* Hindi: [[संयुक्त राज्य अमरीका]] (Sa.nyukta Rājya Amrīkā), [[संयुक्त राष्ट्र अमरीका]] (Sa.nyukta Raštra Amrīkā)
+* Hawaiian: {{tø|haw|'Amelika Huipū'ia}}
+* Hebrew: {{t|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, ''short:'' {{t|he|ארצות הברית|tr=Artsot ha-Brit}}, ''abbr.:'' {{t|he|ארה״ב|tr=ARH-B}}
+* Hindi: {{t|hi|संयुक्त राज्य अमरीका|tr=Sa.nyukta Rājya Amrīkā}}, {{t|hi|संयुक्त राष्ट्र अमरीका|tr=Sa.nyukta Raštra Amrīkā}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}
 * Indonesian: {{t-|id|Amerika Serikat|xs=Indonesian}}
 * [[Interlingua]]: [[Statos Unite de America]]
-* Irish: [[Stáit Aontaithe Mheiriceá]], [[Meiriceá]]
-* Italian: [[Stati Uniti d'America]] {{m|p}}, (''short form'') [[Stati Uniti]] {{m|p}}, [[SUA]]
+* Irish: {{t|ga|Stáit Aontaithe Mheiriceá}}, {{t|ga|Meiriceá}}
+* Italian: {{t|it|Stati Uniti d'America|m|p}}, (''short form'') {{t|it|Stati Uniti|m|p}}, {{t|it|SUA}}
 * Japanese: {{t+|ja|米国|sc=Jpan}} (べいこく, Béikoku), {{t+|ja|アメリカ合衆国|sc=Jpan}} (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 * Kazakh: [[Америка Құрама Штаттары]]
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
@@ -55,41 +55,41 @@
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 * Lao: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
-* Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
+* Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|Соединети Американски Држави|p|tr=Soedíneti Ameríkanski D'ržavi|sc=Cyrl|xs=Macedonian}}, [[САД]] (SAD)
-* Malay: [[Amerika Syarikat]]
-* Maltese: [[Stati Uniti ta' l-Amerika]], [[l-Istati Uniti ta' l-Amerika]], (''short form'') [[Stati Uniti]], [[l-Istati Uniti]], [[USA]]
-* Navajo: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
+* Malay: {{t|ms|Amerika Syarikat}}
+* Maltese: {{t|mt|Stati Uniti ta' l-Amerika}}, {{t|mt|l-Istati Uniti ta' l-Amerika}}, (''short form'') {{t|mt|Stati Uniti}}, {{t|mt|l-Istati Uniti}}, {{t|mt|USA}}
+* Navajo: {{tø|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
 * Nepali: [[संयुक्त राज्य अमेरिका]] (Sa.nyukta Rājya Amerīkā)
-* Norwegian: [[Amerikas forente stater]], [[De forente stater]]
+* Norwegian: {{t|no|Amerikas forente stater}}, {{t|no|De forente stater}}
 * [[Palauan]]: [[Merikel]]
 * Persian: {{fa-Arab|[[ایالات متحده آمریکا|ایالات متحدهٔ آمریکا]]}} (ayâlât-e motahideh âmrika)
-* Polish: [[Stany Zjednoczone Ameryki]] {{m|p}}, [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''colloquial:'' [[Stany]], [[USA]]
-* Portuguese: [[Estados Unidos da América]] {{m|p}}, ''short:'' [[Estados Unidos]] {{m|p}}, [[EUA]]
+* Polish: {{t|pl|Stany Zjednoczone Ameryki|m|p}}, {{t|pl|Stany Zjednoczone Ameryki Północnej}}, ''short:'' {{t|pl|Stany Zjednoczone}}, ''colloquial:'' {{t|pl|Stany}}, {{t|pl|USA}}
+* Portuguese: {{t|pt|Estados Unidos da América|m|p}}, ''short:'' {{t|pt|Estados Unidos|m|p}}, {{t|pt|EUA}}
 * [[Punjabi]]: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 * Romanian: {{t+|ro|Statele Unite ale Americii|f|p}}
 * Russian: {{t+|ru|Соединённые Штаты Америки|m|p|tr=Sojedinjónnyje Štáty Amériki|sc=Cyrl}}, {{t+|ru|США|sc=Cyrl}}
 * [[Scottish Gaelic]]: Na [[Stàitean Aonaichte]] {{f|p}}, Na [[Stàitean Aonaichte na h-Aimeireaga]] {{f|p}}
 * Serbian:
-*: Cyrillic: [[Сједињене Америчке Државе]] {{f|p}}, [[САД]]
+*: Cyrillic: {{t|sr|Сједињене Америчке Државе|f|p}}, {{t|sr|САД}}
 *: Roman: [[Sjedinjene Američke Države]] {{f|p}}, [[SAD]]
 * [[Sicilian]]: [[Stati Uniti dâ Mèrica]] {{m|p}}
-* Slovak: [[Spojené Štáty Americké]] {{m|p}}, [[USA]]
-* Slovene: [[Združene države Amerike]] {{f|p}}, [[Združene države]] {{f|p}} (short form), [[ZDA]]
-* Spanish: [[Estados Unidos de América]] {{m|s}}, (''short form'') Estados Unidos {{m|s}}, ''abbr:'' [[EE. UU.]] {{m|s}}, [[EEUU]]
-* Swedish: [[Amerikas förenade stater]], [[Förenta staterna]]
+* Slovak: {{t|sk|Spojené Štáty Americké|m|p}}, {{t|sk|USA}}
+* Slovene: {{t|sl|Združene države Amerike|f|p}}, {{t|sl|Združene države|f|p}} (short form), {{t|sl|ZDA}}
+* Spanish: {{t|es|Estados Unidos de América|m|s}}, (''short form'') {{t|es|Estados Unidos|m|s}}, ''abbr:'' {{t|es|EE. UU.|m|s}}, {{t|es|EEUU}}
+* Swedish: {{t|sv|Amerikas förenade stater}}, {{t|sv|Förenta staterna}}
 * [[Tajik]]: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
 * Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa)
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t+|tr|ABD}}
-* Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) {{m|p}}, [[США#Ukrainian|США]]
+* Ukrainian: {{t|uk|Сполучені Штати Америки|tr=Spolučeni Štáti Amériki|m|p}}, {{t|uk|США}}
 * [[Uyghur]]: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
 * Uzbek: [[Amerika Qo'shma Shtatlari]]
-* Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
+* Vietnamese: {{t|vi|Hoa Kỳ}}, {{t|vi|Nước Mỹ}}, {{t|vi|Mỹ Quốc}} (''short forms''); {{t|vi|Hợp Chủng Quốc Hoa Kỳ}} (''long form''); {{t|vi|HK}} (''abbr.''), {{t|vi|Mỹ}} (''abbr.'')
 * [[Võro]]: [[Ameeriga Ütisriigiq]]
 * [[West Frisian]]: [[Feriene Steaten fan Amearika]]
-* Yiddish: ''short form'': [[פֿאַראייניקטע שטאַטן]] (Fareynikte Shtatn)
+* Yiddish: ''short form'': {{t|yi|פֿאַראייניקטע שטאַטן|tr=Fareynikte Shtatn|p}}
 {{trans-bottom}}
 
 ====Derived terms====
