--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -27,14 +27,15 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 
 ====Translations====
 {{trans-top|organ that stores food}}
-* Arabic: {{Arab|[[معدة]]}} {{unicode|(máʕida)}} {{f}},  {{t|ar|معدة|f|tr=má`ida|sc=Arab}}
+* Arabic: {{t|ar|معدة|f|tr=má`ida|sc=Arab}}
 * Aramaic:
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{m}}
 *: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{m}}
 * Armenian: [[ստամոքս]] (stamok's)
 * [[Breton]]: [[stomog]] {{m}}
 * [[Chamicuro]]: {{tø|ccc|knani}}
-* Chinese: [[胃]] (wèi), [[肚子]] (dùzi)
+* Chinese:
+*: Mandarin: {{t|zh|胃|tr=wèi|sc=Hani}},  {{t|zh|肚子|tr=dùzi|sc=Hani}}
 * Croatian: {{t-|hr|želudac|m}}, {{t-|hr|stomak|m}}
 * Czech: {{t+|cs|žaludek|m}}
 * Danish: {{t-|da|bug|c}}
@@ -56,7 +57,6 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Latin: [[stomachus]] {{m}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
 * Maltese: {{t-|mt|stonku|m|xs=Maltese}}
-* Mandarin: {{t|zh|胃|tr=wèi|sc=Hani}},  {{t|zh|肚子|tr=dùzi|sc=Hani}}
 * Mandinka: {{tø|mnk|konoo|xs=Mandinka}}
 * Norwegian: {{t-|no|mage|m}}
 * Old English: {{t-|ang|maga|m|xs=Old English}}
@@ -77,11 +77,12 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 {{trans-bottom}}
 
 {{trans-top|belly}}
-* Arabic: {{Arab|[[معدة]]}} {{unicode|(máʕida)}} {{f}}, {{Arab|[[بطن|بَطْن]]}} {{unicode|(baʈn)}} {{f}}
+* Arabic: {{t|ar|معدة|f|tr=má`ida|sc=Arab}}, {{t|ar|بطن|m|tr=baTn|sc=Arab}}
 * Aramaic:
 *: Syriac: [[ܟܪܣܐ]] (karsā’) {{f}}
 *: Hebrew: [[כרסא]] (karsā’) {{f}}
-* Chinese: {{zh-ts|腹部|腹部}} (fùbù), [[肚子]] (dùzi)
+* Chinese:
+*: Mandarin: {{t|zh|腹部|tr=fùbù|sc=Hani}},  {{t|zh|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t-|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
 * Finnish: {{t+|fi|maha}}
