--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -14,7 +14,8 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * [[fine]]d
 
 ===Verb===
-{{en-verb|finds|finding|found|'''[[found]]''' or {{archaic}} '''[[founden]]'''}}
+[[File:Nymphs finding the Head of Orpheus.jpg|thumb|upright|"Nymphs Finding the Head of Orpheus", a painting by [[w:John William Waterhouse|John William Waterhouse]]]]
+{{en-verb|finds|finding|found|'''[[found]]''' or {{qualifier|archaic}} '''[[founden]]'''}}
 
 # {{transitive}} To [[encounter]], to [[discover]].
 #: ''Project Gutenberg '''finds''' that Find is the 190th most important word in the English language.
