--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -41,14 +41,18 @@ In the English language, it is one of only a few distinct words where the gender
 
 ====Translations====
 {{trans-top|of a blonde complexion}}
+* Arabic: {{t|ar|شقراء|f|sc=Arab|tr=shaqra'|alt=شَقْراء}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 {{trans-mid}}
+* French: {{t|fr|blonde}}
 {{trans-bottom}}
 {{trans-top|having a blonde or gold appearance}}
 {{trans-mid}}
 {{trans-bottom}}
 {{trans-top|of a light brown color}}
+* Arabic: {{t|ar|شقراء|f|sc=Arab|tr=shaqra'|alt=شَقْراء}}
 {{trans-mid}}
+* French: {{t|fr|blonde}}
 {{trans-bottom}}
 
 ===Derived terms===
