--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -36,6 +36,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Italian: {{t+|it|tenda|f}}
 * Japanese: {{t+|ja|カーテン|tr=kāten|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
+* Mandarin: {{t|zh|窗簾|sc=Hani}},  {{t|zh|窗帘|tr=chuānglián|sc=Hani}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra|sc=Cyrl}}, {{t+|ru|занавеска|f|tr=zanav'éska|sc=Cyrl}}
 * Slovene: {{t+|sl|zavesa|f}}
