--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -26,6 +26,9 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-top|piece of cloth covering a window}}
 * Arabic: {{t|ar|ستارة|f|tr=sitaara|sc=Arab}}
 * Armenian: [[վարագույր]] (varaguyr)
+* Chinese:
+* CJKV Characters: [[幕]]
+*: Mandarin: {{t|zh|窗簾|sc=Hani}},  {{t|zh|窗帘|tr=chuānglián|sc=Hani}}
 * Croatian: {{t-|hr|zavjesa|f|alt=zȃvjesa}}, {{t-|hr|zastor|m|alt=zástor}}
 * Czech: {{t-|cs|závěs|m}}
 * Finnish: {{t-|fi|verho}}
@@ -36,7 +39,6 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Italian: {{t+|it|tenda|f}}
 * Japanese: {{t+|ja|カーテン|tr=kāten|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
-* Mandarin: {{t|zh|窗簾|sc=Hani}},  {{t|zh|窗帘|tr=chuānglián|sc=Hani}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra|sc=Cyrl}}, {{t+|ru|занавеска|f|tr=zanav'éska|sc=Cyrl}}
 * Slovene: {{t+|sl|zavesa|f}}
@@ -62,8 +64,6 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|Arabic}}: [[ستارة]] (setāra) {{f}}
-* {{ttbc|CJKV Characters}}: [[幕]]
 * {{ttbc|Indonesian}}: [[serambi]], [[korden]], [[layar]]
 * {{ttbc|Kurdish}}: [[perde]] {{f}}
 * {{ttbc|Slovak}}: [[opona]] {{f}}
