--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -43,7 +43,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Russian: {{t+|ru|штора|f|tr=štóra|sc=Cyrl}}, {{t+|ru|занавеска|f|tr=zanav'éska|sc=Cyrl}}
 * Slovene: {{t+|sl|zavesa|f}}
 * Spanish: {{t-|es|cortina|f}}
-* [[Swahili]]: {{t|sw|pazia}}
+* Swahili: {{t|sw|pazia}}
 * Turkish: {{t+|tr|perde}}
 {{trans-bottom}}
 
