--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -112,6 +112,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 [[li:New Zealand]]
 [[hu:New Zealand]]
 [[ja:New Zealand]]
+[[no:New Zealand]]
 [[pl:New Zealand]]
 [[ro:New Zealand]]
 [[ru:New Zealand]]
