--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -56,6 +56,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Italian: {{t-|it|sipario|m}}
 * Japanese: [[幕]] ([[まく]], maku), [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|кулиса|f|tr=kulísa|sc=Cyrl}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|занавес|m|tr=zánav'es|sc=Cyrl}}
 * Slovene: {{t+|sl|zavesa|f}}
