--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -39,6 +39,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Italian: {{t+|it|tenda|f}}
 * Japanese: {{t+|ja|カーテン|tr=kāten|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
+* [[Macedonian]]: {{t|mk|завеса|f|tr=závesa|sc=Cyrl}},  {{t|mk|перде|n|tr=pérde|sc=Cyrl}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra|sc=Cyrl}}, {{t+|ru|занавеска|f|tr=zanav'éska|sc=Cyrl}}
 * Slovene: {{t+|sl|zavesa|f}}
