--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -1,10 +1,16 @@
 ==Translingual==
 
+===Etymology===
+{{Han compound|音|心|c1=s|c2=s|t2=heart|ls=ic}}
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=0033<sub>6</sub>|canj=卜廿日心 (YTAP)|ids=⿱[[音]][[心]]}}
 
 # [[heart]], [[soul]], [[conscience]]
 # [[thought]], [[opinion]], [[mind]]
+
+====Derived terms====
+* [[億]], [[噫]], [[憶]], [[臆]], [[澺]], [[檍]], [[燱]], [[薏]], [[繶]], [[醷]], [[鐿]], [[鷾]], [[嬑]], [[癔]], [[譩]]
 
 ====References====
 * {{Han ref|kx=0394.220|dkj=10921|dj=0730.280|hdz=42323.030|uh=610F|ud=24847|bh=B74E|bd=46926}}
