--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -62,6 +62,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Russian: {{t+|ru|занавес|m|tr=zánav'es|sc=Cyrl}}
 * Slovene: {{t+|sl|zavesa|f}}
 * Spanish: {{t-|es|cortina|f}}
+* Swahili: {{t|sw|pazia}}
 * Turkish: {{t+|tr|perde}}
 {{trans-bottom}}
 
@@ -82,6 +83,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Finnish: {{t-|fi|verhota}}
 * Portuguese: [[cobrir]] com cortina, [[acortinar]], [[encortinar]]
 {{trans-mid}}
+* Swahili: {{t|sw|pazia}}
 * Turkish: {{t+|tr|perdelemek}}
 {{trans-bottom}}
 
