sorted/rebalanced translations, trans unlink Swahili <coat#6905316>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -31,15 +31,15 @@
 * Greek: {{t+|el|πανωφόρι|n|tr=panofori|sc=Grek}}, {{t+|el|παλτό|n|tr=palto|sc=Grek}}
 * Indonesian: {{t+|id|mantel|xs=Indonesian}}
 * Irish: {{t-|ga|cóta|m|xs=Irish}}
-{{trans-mid}}
 * Italian: {{t+|it|mantello|m}}
+{{trans-mid}}
 * Japanese: [[コート]] (kōto), [[外套]] ([[がいとう]], gaitō)
 * Portuguese: {{t+|pt|casaco|m}}
 * Russian: [[пальто]] (pal’tó) {{n}}, [[пиджак]] (pidžák) {{m}}
 * [[Scottish Gaelic]]: [[còta]] {{m}}
 * Slovene: {{t+|sl|plašč|m}}
 * Spanish: {{t+|es|abrigo|m}}, {{t+|es|saco|m}}, {{t-|es|casaca|f}}
-* [[Swahili]]: {{t|sw|koti}}
+* Swahili: {{t|sw|koti}}
 * Swedish: {{t+|sv|rock|c}}
 * [[Taos]]: [[kùti’ína]]
 {{trans-bottom}}
@@ -65,8 +65,8 @@
 {{trans-top|fur or feathers}}
 * Danish: {{t+|da|pels|c}} (fur), [[fjerdragt]] [[c]] (feathers)
 * Finnish: [[turkki]] (fur), [[höyhenpuku]] (feathers)
-{{trans-mid}}
 * Japanese: [[毛皮]]([[けがわ]], kegawa), [[羽毛]]([[うもう]], umō)
+{{trans-mid}}
 * Swahili: {{t|sw|koti}}
 * Swedish: [[hårbeklädnad]], [[päls]], [[fjäderdräkt]]
 {{trans-bottom}}
@@ -94,8 +94,8 @@
 * Finnish: {{t-|fi|päällystää}}
 * French: {{t+|fr|couvrir}}
 * German: [[beschichten]]
-{{trans-mid}}
 * Italian: {{t-|it|rivestire}}
+{{trans-mid}}
 * Russian: [[покрывать]] (pokryvát’)
 * Spanish: {{t+|es|cubrir}}
 * Swahili: {{t|sw|koti}}
@@ -104,8 +104,8 @@
 
 {{trans-top|to cover as a coat}}
 * Finnish: {{t+|fi|peittää}}
-{{trans-mid}}
 * Swahili: {{t|sw|koti}},  {{t|sw|koti}}
+{{trans-mid}}
 * Swedish: {{t+|sv|täcka}}
 {{trans-bottom}}
 
