--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -31,6 +31,7 @@
 {{trans-top|Act of stabbing}}
 * Dutch: {{t+|nl|steek}}
 {{trans-mid}}
+* Norwegian: {{t|no|stikk|n}}
 * Russian: {{t+|ru|удар|m|sc=Cyrl}}
 {{trans-bottom}}
 
@@ -38,11 +39,13 @@
 * Dutch: {{t+|nl|steekwond}}
 * Italian: {{t|it|coltellata|f}},  {{t|it|pugnalata|f}}
 {{trans-mid}}
+* Norwegian: {{t|no|stikk|n}}
 * Russian: [[колотая рана]] {{f}}
 {{trans-bottom}}
 
 {{trans-top|Pain inflicted on a person's feelings}}
 {{trans-mid}}
+* Norwegian: {{t|no|stikk|n}}
 {{trans-bottom}}
 
 {{trans-top|Attempt}}
@@ -54,6 +57,7 @@
 {{trans-top|Criticism}}
 * Dutch: {{t-|nl|kritiek}},{{t+|nl|aanval}}
 {{trans-mid}}
+* Norwegian: {{t|no|stikk|n}}
 {{trans-bottom}}
 
 ===Verb===
