--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -35,6 +35,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Italian: {{t-|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru)
 * Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
+* [[Macedonian]]: {{t|mk|повраќа|tr=póvraḱa|sc=Cyrl}},  {{t|mk|блуе|tr=blúe|sc=Cyrl}}
 * Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
 * Norwegian: {{t+|no|kaste opp}}
 * Polish: {{t-|pl|wymiotować}}
