t+mk:[[повраќаница]] t+mk:[[блујавица]] ([[WT:EDIT|Assisted]]) <vomit#6912154>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -68,6 +68,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Hebrew: {{he-translation|קא|kei}}
 * Hungarian: {{t|hu|hányás}},  {{t|hu|hányadék}}
 * Kurdish: {{ku-Arab|[[ڕشانه‌وه‌]]}}
+* [[Macedonian]]: {{t|mk|повраќаница|f|tr=povraḱánica|sc=Cyrl}},  {{t|mk|блујавица|f|tr=blujávica|sc=Cyrl}}
 * Maltese: [[rimettar]]
 {{trans-mid}}
 * Norwegian: {{t+|no|oppkast|n}}
