--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -30,7 +30,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 =====Translations=====
 {{trans-top|playful activity}}
 * Albanian: [[lojë]] {{f}}
-* Arabic: {{t+|ar|لعبة|f|sc=Arab}} (láʻba)
+* Arabic: {{t+|ar|لَعِب|f|sc=Arab}} (láʻib)
 * Armenian: [[խաղ]] (xaġ)
 * [[Catalan]]: [[joc]] {{m}}
 * Chinese: [[玩]] (wán), [[玩兒]], [[玩儿]] (wánr)
