--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -62,6 +62,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Slovak: {{t-|sk|hra|f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|spel}}
 * Turkish: {{t+|tr|oyun}}
 * Welsh: {{t|cy|gêm|f|xs=Welsh}}
@@ -73,6 +74,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[Macedonian]]: {{t|mk|драма|f|tr=dráma|sc=Cyrl|xs=Macedonian}},  {{t|mk|пиеса|f|tr=piésa|sc=Cyrl|xs=Macedonian}}
 {{trans-mid}}
 * Russian: {{t+|ru|пьеса|f|tr=p’jésa|sc=Cyrl}}
+* Swahili: {{t|sw|tamthilia}}
 * Turkish: {{t+|tr|oyun}}
 {{trans-bottom}}
 
@@ -105,6 +107,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Slovak: {{t-|sk|hra|f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: [[obra]] [[teatral]] {{f}}
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|pjäs|c}}
 * [[Telugu]]: [[నాటకం]] (naaTakaM)
 * Turkish: {{t+|tr|oyun}},  {{t|tr|tiyatro oyunu}}
@@ -122,6 +125,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Polish: {{t+|pl|gra|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá|sc=Cyrl}}
 * Slovene: {{t+|sl|igra|f}}
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|spel|c}}
 {{trans-bottom}}
 
@@ -129,11 +133,13 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Finnish: {{t-|fi|siirto}}
 {{trans-mid}}
 * [[Macedonian]]: {{t-|mk|игра|f|tr=ígra|sc=Cyrl|xs=Macedonian}}
+* Swahili: {{t|sw|tamthilia}}
 {{trans-bottom}}
 
 {{trans-top|geological formation}}
 * Finnish: {{t+|fi|kenttä}}, {{t-|fi|esiintymä}}
 {{trans-mid}}
+* Swahili: {{t|sw|tamthilia}}
 {{trans-bottom}}
 
 {{trans-top|area of free movement for a part of a mechanism}}
@@ -142,6 +148,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Russian: {{t|ru|люфт|m|tr=l'uft|sc=Cyrl}}, {{t|ru|зазор|m|tr=zazór|sc=Cyrl}}, {{t|ru|свободный ход|m|tr=svobódnyj xod|sc=Cyrl}}
 {{trans-mid}}
 * Spanish: {{t+|es|juego|m}}
+* Swahili: {{t|sw|tamthilia}}
 {{trans-bottom}}
 
 {{trans-top|action carried out when it is one's turn to play}}
@@ -227,6 +234,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Slovak: [[hrať sa]]
 * Slovene: {{t+|sl|igrati se}}
 * Spanish: {{t+|es|jugar}}
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|leka}}
 * [[Telugu]]: [[ఆడు]] (aaDu)
 * Turkish: {{t+|tr|oynamak}}
@@ -284,6 +292,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
 * Slovene: {{t+|sl|igrati}}
 * Spanish: {{t+|es|tocar}}
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}
 * Turkish: {{t+|tr|çalmak}}
 {{trans-bottom}}
@@ -294,6 +303,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-mid}}
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra|sc=Cyrl|xs=Macedonian}}
 * Polish: {{t+|pl|grać}}
+* Swahili: {{t|sw|tamthilia}}
 {{trans-bottom}}
 
 {{trans-top|act in a performance}}
@@ -315,6 +325,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Portuguese: {{t+|pt|atuar}}, {{t+|pt|representar}}
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
 * Slovene: {{t+|sl|igrati}}
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: [[agera]], [[spela]] en roll
 {{trans-bottom}}
 
@@ -341,6 +352,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
 * Slovene: {{t+|sl|igrati}}
 * Spanish: [[jugar]] a
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}
 * Turkish: {{t+|tr|oynamak}}
 {{trans-bottom}}
@@ -363,6 +375,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Polish: [[grać]], [[odtwarzać]]
 * Portuguese: {{t+|pt|gravar}}
 * Slovene: [[predvajati]]
+* Swahili: {{t|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}, {{t+|sv|spela upp}}
 {{trans-bottom}}
 
