t+luy:[[ekalamu]] ([[WT:EDIT|Assisted]]) <pen#6944878>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -113,6 +113,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 {{trans-mid}}
 * Korean: [[펜]] (pen)
 * Kurdish: {{ku-Arab|[[پێنووس]]}}
+* Luhya: {{tø|luy|ekalamu}}
 * [[Macedonian]]: {{t|mk|пенкало|n|tr=pénkalo|sc=Cyrl|xs=Macedonian}}
 * [[Marathi]]: {{t|mr|लेखणी|sc=Deva|xs=Marathi}}
 * Norwegian: {{t+|no|penn|m}}
