t+luy:[[kumuchosi]] ([[WT:EDIT|Assisted]]) <coat#6945597>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -34,6 +34,7 @@
 * Italian: {{t+|it|mantello|m}}
 {{trans-mid}}
 * Japanese: [[コート]] (kōto), [[外套]] ([[がいとう]], gaitō)
+* Luhya: {{tø|luy|kumuchosi}}
 * Portuguese: {{t+|pt|casaco|m}}
 * Russian: [[пальто]] (pal’tó) {{n}}, [[пиджак]] (pidžák) {{m}}
 * [[Scottish Gaelic]]: [[còta]] {{m}}
