t+luy:[[enda]] t+kln:[[moek]] t+sw:[[tumbo]] ([[WT:EDIT|Assisted]]) <stomach#6945820>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -95,15 +95,18 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Hungarian: {{t+|hu|has}}
 * Italian: {{t+|it|pancia|f}}
 * Japanese: [[お腹]] ([[おなか]], o-naka), [[腹]] ([[はら]], hara)
+* Kalenjin: {{tø|kln|moek}}
 * Korean: [[배]] (bae)
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
+* Luhya: {{tø|luy|enda}}
 * [[Macedonian]]: {{t|mk|стомак|m|tr=stómak|sc=Cyrl}},  {{t|mk|мев|m|tr=mev|sc=Cyrl}}
 * Maltese: {{t+|mt|żaqq|f|xs=Maltese}}
 * Norwegian: {{t-|no|mage|m}}, {{t+|no|buk|m}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Russian: {{t+|ru|живот|m|tr=živót|sc=Cyrl}}
 * Spanish: {{t+|es|barriga|f}}, {{t+|es|vientre|m}}
+* Swahili: {{t|sw|tumbo}}
 * Swedish: {{t+|sv|buk}}, {{t+|sv|mage|c}}
 {{trans-bottom}}
 
