--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -48,6 +48,7 @@
 * Slovene: [[kopenska želva]] {{f}}
 * Somali: {{t-|so|diin|xs=Somali}}
 * Spanish: [[tortuga terrestre]] {{f}}, [[morrocoy]] {{m}} {{italbrac|Venezuela}}
+* Swahili: {{t|sw|kobe}}
 * Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
 * [[Telugu]]: [[తాబేలు]] (taabealu)
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
