--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -213,6 +213,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * Polish: {{t+|pl|śliwa|f}}
 * Portuguese: {{t+|pt|ameixeira|f}}, {{t+|pt|ameixa|f}}
+* Romanian: {{t|ro|prun|m}}
 * Russian: {{t+|ru|слива|f|tr=slíva|sc=Cyrl}}
 * [[Scots]]: [[ploom]], [[ploum]]
 * [[Scottish Gaelic]]: {{t-|gd|plumas|m|xs=Scottish Gaelic}}
