--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -17,13 +17,13 @@
 #: ''He's pulled that bird over there.''
 # {{transitive}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
 #: ''Each day, they pulled the old bread and set out fresh loaves.''
-# {{transitive}} {{context|informal}} to [[do]] or [[perform]]
+# {{transitive|informal}} to [[do]] or [[perform]]
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
 # {{transitive}} To [[retrieve]] or [[generate]] for use.
 #: ''I'll have to '''pull''' a part number for that.''
 # {{intransitive}} To apply a force such that an object comes toward the person or thing applying the force.
 #: ''You're going to have to pull harder to get that cork out of the bottle.''
-# {{intransitive}}{{context|slang}} To succeed in finding a person with whom to have sex or to make out with somebody which is not in a relationship with you, eg "I pulled tonight!" - meaning the person made out.
+# {{intransitive|slang}} To succeed in finding a person with whom to have sex or to make out with somebody which is not in a relationship with you, eg "I pulled tonight!" - meaning the person made out.
 # {{transitive|online gaming}} Initiate combat with an enemy character in an [[online game]].
 
 ====Synonyms====
