/* English */ +ase <France#6961621>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -31,6 +31,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Afrikaans]]: [[Frankryk]]
 * Albanian: {{t+|sq|Franca|xs=Albanian}}
 *: [[Gheg]]: [[Frankreich]]
+* [[American Sign Language]]: [[F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist]]
 * Arabic: {{t+|ar|فرنسا|f|tr=faránsa|sc=Arab}}
 * [[Aragonese]]: [[Franzia]] {{f}}
 * Armenian: [[Ֆրանսիա]] (Fransia)
