t+sw:[[chembechembe]] ([[WT:EDIT|Assisted]]) <flesh#6963061>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -40,6 +40,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Polish: {{t+|pl|ciało|n}}, {{t+|pl|mięso|n}}
 * Russian: мягкая [[ткань]] {{f}}, [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
 * [[Scottish Gaelic]]: [[feòil]] {{f}}
+* Swahili: {{t|sw|chembechembe}}
 * [[Telugu]]: [[మాంసం]] (maamsam)
 {{trans-bottom}}
 
