--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -63,13 +63,14 @@
 
 ====Translations====
 {{trans-top|to move from further away to nearer to}}
-* Arabic: {{t|ar|جاء|alt=جاءَ|tr=jaa'a|sc=Arab}}, {{t|ar|حضر|alt=حَضَرَ|tr=HaDara|sc=Arab}}, {{t|ar|أتى|tr='ataa|sc=Arab}}
+* Arabic: {{t|ar|جاء|tr=jaa'a|sc=Arab}}, {{t|ar|حضر|tr=HáDara|sc=Arab}}, {{t|ar|أتى|tr='ataa|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|جا|tr=gaa|sc=Arab|xs=Egyptian Arabic}}
 * Armenian: [[գալ]] (gal)
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
 * Bulgarian: [[идвам]] / [[отивам]] (idvam / otivam)
-* Chinese: {{zh-tsp|來|来|lái}}
+* Chinese:
+*: Mandarin: {{zh-tsp|來|来|lái}}
 * [[Crimean Tatar]]: [[kelmek]]
 * Czech: {{t+|cs|přijít}}
 * Dutch: {{t+|nl|komen}}
@@ -138,7 +139,7 @@
 * Italian: {{t+|it|venire}}
 * Polish: [[dochodzić]] / [[dojść]]
 * Portuguese: {{t+|pt|gozar}}
-* Russian: {{t+|ru|кончать|tr=končát’|sc=Cyrl}}
+* Russian: {{t+|ru|кончать|tr=končát’|sc=Cyrl}} {{impf}}, {{t+|ru|кончить|tr=kónčit’|sc=Cyrl}} {{pf}}
 {{trans-bottom}}
 
 {{trans-top|to become}}
