--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -68,6 +68,7 @@
 
 ====Translations====
 {{trans-top}}
+* [[Afrikaans]]: {{t|af|praat}}
 * Arabic: {{Arab|[[تحدث]]}} (taḥáddaṯa), {{Arab|[[تكلم]]}} (takállama)
 * Armenian: [[խոսել]] (khosel)
 * [[Breton]]: [[komz]]
@@ -107,6 +108,7 @@
 * [[Sicilian]]: {{t+|scn|parrari|xs=Sicilian}},  {{t|scn|parlari|xs=Sicilian}}
 * Slovak: [[rozprávať]], [[hovoriť]]
 * Slovene: [[govoriti]] (1, 2, 3, 4, 6)
+* [[Sotho]]: {{t|st|bua}}
 * Spanish: {{t+|es|hablar}}
 * Swahili: {{t-|sw|ongea|xs=Swahili}}
 * Swedish: {{t+|sv|tala}}
