--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -40,6 +40,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * [[Macedonian]]: {{t|mk|ќелија|f|tr=ḱelija|sc=Cyrl|xs=Macedonian}}
 {{trans-mid}}
 * Spanish: {{t+|es|celda|f}}
+* Swahili: {{t|sw|jela}}
 {{trans-bottom}}
 
 {{trans-see|(baseball) bullpen|bullpen}}
