--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -222,7 +222,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 # To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #: ''This road '''cuts''' right through downtown.''
 # {{cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it.
-# {{informal}} Not to [[attend]] a [[class]], especially when this is not [[permit]]ted.
+# {{informal}} To not [[attend]] a [[class]], especially when not [[permit]]ted.
 #: ''I '''cut''' fifth period to hang out with Angela.''
 # To change [[direction]] suddenly.
 #: ''The football player '''cut''' to his left to evade a tackle.''
