--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -61,7 +61,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 ===Etymology 2===
 [[Image:Ballpoint-pen-parts.jpg|thumb|right|A ballpoint pen, showing assembly.]]
-{{etyl|xno}} ''[[penne]]'', from {{etyl|fro}} ''[[penne]]'', from {{etyl|la}} ''[[penna]]'' ‘feather’.
+{{etyl|xno}} ''[[penne]]'', from {{etyl|fro}} ''[[penne]]'', from {{etyl|la}} ''[[penna]]'' 'feather'.
 
 ====Noun====
 {{en-noun}}
@@ -155,7 +155,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * [[Macedonian]]: {{t|mk|пишува|tr=píšuva|sc=Cyrl|xs=Macedonian}}
 * Norwegian: [[skrive]], [[føre i pennen]]
 * Portuguese: {{t+|pt|escrever}}
-* Russian: {{t+|ru|писать|sc=Cyrl}} / {{t+|ru|написать|sc=Cyrl}} (pisát’ / napisát’)
+* Russian: {{t+|ru|писать|sc=Cyrl}} / {{t+|ru|написать|sc=Cyrl}} (pisát' / napisát')
 {{trans-bottom}}
 
 ===Etymology 3===
@@ -261,6 +261,15 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 '''pen'''
 
 # [[beautiful]]
+
+----
+
+==Tok Pisin==
+
+===Noun===
+{{infl|tpi|noun}}
+
+#[[paint]]
 
 [[am:pen]]
 [[ar:pen]]
