--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -73,7 +73,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 ==Latin==
 
 ===Phrase===
-'''et cetera'''
+{{infl|la|phrase|head={{l|la|et}} {{l|la|cetera}}}}
 
 # And the rest; and the others; and so on.
 
@@ -87,8 +87,6 @@ Often abbreviated ''etc.'' or ''&c''. ''[[Ampersand]]'' (''[[&]]'') comes from t
 
 ===See also===
 * [[et hoc genus omne]]
-
-[[Category:Latin phrases]]
 
 ----
 
