--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -282,6 +282,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Armenian: {{t|hy|կտրատել|tr=ktratel|sc=Armn|xs=Armenian}}
 * Chinese: {{t-|cmn|切|tr=qiē|sc=Hani|xs=Mandarin}}
 * Danish: [[udskære]]
+* Esperanto: {{t|eo|tranĉi}}
 * Finnish: {{t+|fi|leikata}}
 * German: {{t+|de|schneiden}}
 * Hebrew: [[לחתוך]] (lakhtokh)
