--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -64,6 +64,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Italian: {{t+|it|Israele}}
 * Japanese: {{t+|ja|イスラエル|tr=isuraeru|sc=Jpan}}
 {{trans-mid}}
+* Kalenjin: {{tø|kln|Israel}}
 * [[Kannada]]: [[ಇಸ್ರೇಲ್]]
 * Latvian: {{t-|lv|Izraēla|xs=Latvian}},  {{t|lv|Izraēlas Valsts|xs=Latvian}}
 * Lithuanian: {{t|lt|Izraelis|m|xs=Lithuanian}},  {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
