--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -67,6 +67,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Kalenjin: {{tø|kln|Israel}}
 * [[Kamba]]: {{tø|kam|Israel}}
 * [[Kannada]]: [[ಇಸ್ರೇಲ್]]
+* [[Kikuyu]]: {{tø|ki|Israel}}
 * Latvian: {{t-|lv|Izraēla|xs=Latvian}},  {{t|lv|Izraēlas Valsts|xs=Latvian}}
 * Lithuanian: {{t|lt|Izraelis|m|xs=Lithuanian}},  {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
