t+mer:[[Israel]] ([[WT:EDIT|Assisted]]) <Israel#6993791>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -75,6 +75,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Macedonian]]: {{t-|mk|Израел|m|tr=Ízrael|sc=Cyrl|xs=Macedonian}}
 * Maltese: [[Iżrael]]
 * [[Marathi]]: [[इस्रायल]] (isrāyal)
+* [[Meru]]: {{tø|mer|Israel}}
 * Norwegian: {{t+|no|Israel}}
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
 * [[Pashto]]: {{ps-Arab|[[اسرايل]]}}
