--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -41,6 +41,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Italian: {{t+|it|Nuova Zelanda|f}}
 {{trans-mid}}
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyū Jīrando|sc=Jpan}}
+* [[Kalenjin]]: {{tø|kln|Nyuziland}}
 * [[Kamba]]: {{tø|kam|Nyuziland}}
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
 * Korean: [[뉴질랜드]] (nyujillaendeu)
