--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -46,6 +46,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
 * Korean: [[뉴질랜드]] (nyujillaendeu)
 * Latin: [[Nova Zelandia]] {{f}}
+* Luhya: {{tø|luy|Niuziland}}
 * [[Macedonian]]: {{t-|mk|Нов Зеланд|m|tr=Nov Zéland|sc=Cyrl|xs=Macedonian}}
 * Maltese: New Zealand
 * Maori: [[Aotearoa]], [[Niu Tireni]]
