t+sw:[[Ufaransa]] ([[WT:EDIT|Assisted]]) <France#6999464>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -117,6 +117,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * Slovene: {{t+|sl|Francija|f}}
 * [[Sotho]]: France
 * Spanish: {{t+|es|Francia|f}}
+* Swahili: {{t|sw|Ufaransa}}
 * Swedish: {{t+|sv|Frankrike}}
 * [[Tagalog]]: [[Pransya]]
 * [[Tamil]]: [[பிரான்ஸ்]] (pirāns)
