--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -90,6 +90,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Livonian]]: [[Prantsūzmō]]
 * [[Low Saxon]]: [[Frankriek]]
 * Luhya: {{tø|luy|Frans}}
+* [[Luo]]: {{tø|luo|Frans}}
 * [[Luxembourgish]]: [[Frankräich]]
 * [[Macedonian]]: {{t+|mk|Франција|f|tr=Fráncija|sc=Cyrl|xs=Macedonian}}
 * [[Malagasy]]: [[Frantsa]]
