t+sw:[[Ujerumani]] ([[WT:EDIT|Assisted]]) <Germany#6999483>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -76,7 +76,7 @@
 * Slovak: [[Nemecko]] {{n}}
 * Slovene: {{t+|sl|Nemčija|f}}
 * Spanish: {{t+|es|Alemania|f}}
-* Swahili: [[Ujerumani]] ''(noun 6)''
+* Swahili: [[Ujerumani]] ''(noun 6)'',  {{t|sw|Ujerumani}}
 * Swedish: {{t+|sv|Tyskland}}
 * Thai: {{Thai|[[ชาวเยอรมัน]]}} (chaao yerráman)
 * Turkish: {{t+|tr|Almanya}}
