--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -23,6 +23,7 @@
 ====Translations====
 {{trans-top|outer garment covering the upper torso and arms}}
 * Arabic: {{t|ar|معطف|m|tr=mí`Taf|sc=Arab}}
+* Chinese:
 *: Mandarin: {{t|zh|外衣|tr=wàiyī|sc=Hani}},  {{t|zh|大衣|tr=dàyī|sc=Hani}},  {{t|zh|外套|tr=wàitào|sc=Hani}}
 * Czech: {{t-|cs|kabát|m}}
 * Danish: [[frakke]] {{c}}
