--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -150,6 +150,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 [[ja:stomach]]
 [[pl:stomach]]
 [[pt:stomach]]
+[[ro:stomach]]
 [[ru:stomach]]
 [[simple:stomach]]
 [[fi:stomach]]
