t+is:[[telja]] ([[WT:EDIT|Assisted]]) <count#7026421>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -29,6 +29,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Finnish: {{t+|fi|määrä}}
 * German: {{t+|de|Anzahl|g=f}}
 {{trans-mid}}
+* Icelandic: {{t|is|telja}}
 * Italian: {{t-|it|contatore|g=m}}
 * Middle English: {{tø|enm|counte}}
 * [[Old French]]: {{tø|fro|conte}}
