t+enm:[[counten]] ([[WT:EDIT|Assisted]]) <count#7026428>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -103,6 +103,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|брои|tr=brói|sc=Cyrl|xs=Macedonian}}
 * Malay: {{t+|ms|kira|xs=Malay}}
+* Middle English: {{tø|enm|counten}}
 * Persian: [[شمردن]]
 * Polish: {{t+|pl|liczyć}}
 * Portuguese: {{t+|pt|contar}}
