iwiki +[[:ro:skirt]] <skirt#7073163>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -206,6 +206,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijon|l
 [[hu:skirt]]
 [[nl:skirt]]
 [[pl:skirt]]
+[[ro:skirt]]
 [[ru:skirt]]
 [[simple:skirt]]
 [[fi:skirt]]
