t+bg:[[хубав]] ([[WT:EDIT|Assisted]]) <beautiful#7079761>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -111,6 +111,7 @@
 
 {{trans-top|of weather: pleasant, clear}}
 * Armenian: [[հաճելի]] (hač̣eli)
+* Bulgarian: {{t|bg|хубав|sc=Cyrl}}
 * Dutch: {{t+|nl|mooi}}
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}
