--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -245,7 +245,7 @@ Name of an older card game ''biritch'', probably {{etyl|ru}} - OED, or probably 
 * Spanish: {{t+|es|bridge|m}}
 * Swahili: {{t+|sw|daraja|xs=Swahili}}
 * Swedish: {{t+|sv|bridge}}
-* Turkish: {{t+|tr|köprü}}
+* Turkish: {{t+|tr|briç}}
 * Ukrainian: [[брідж]] (bridž) {{m}}
 {{trans-bottom}}
 
