/* Swedish */ Format <port#7095463>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -377,7 +377,8 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} 
 ----
 
 ==Swedish==
-From late {{etyl|non|sv}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} {{m}}, from {{etyl|la|sv}} {{term|porta|lang=la}} {{f}}.
+===Etymology===
+From late {{etyl|non|sv}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} {{m}}, from {{etyl|la|sv}} {{term|porta|lang=la}} {{f}}. Computing sense loan-translation from English.
 
 ===Pronunciation===
 * {{audio|Sv-port.ogg|audio}}
